--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,36 +36,46 @@
         android:id="@+id/scoreText" />
 
     <Button
-        android:text="Button"
+        android:text="Start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/choice3"
-        android:layout_below="@+id/choice2"
-        android:layout_alignStart="@+id/choice2" />
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="56dp"
+        android:id="@+id/start"
+        style="@style/Widget.AppCompat.Button.Colored" />
 
-    <Button
-        android:text="Button"
+    <GridLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/choice2"
-        android:layout_below="@+id/choice1"
-        android:layout_alignStart="@+id/choice1" />
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:columnCount="2"
+        android:rowCount="2">
 
-    <Button
-        android:text="Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/choice4"
-        android:layout_below="@+id/choice3"
-        android:layout_alignStart="@+id/choice3" />
+        <Button
+            android:text="Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/choice1" />
 
-    <Button
-        android:text="Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="185dp"
-        android:id="@+id/choice1"
-        android:layout_below="@+id/eqText"
-        android:layout_centerHorizontal="true" />
+        <Button
+            android:text="Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/choice2" />
+
+        <Button
+            android:text="Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/choice3" />
+
+        <Button
+            android:text="Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button5" />
+    </GridLayout>
 
 </RelativeLayout>
