Fixed resource name resolution

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,7 +75,7 @@
             android:text="Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button5" />
+            android:id="@+id/choice4" />
     </GridLayout>
 
 </RelativeLayout>
