--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,15 +17,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/timerText" />
-
-    <TextView
-        android:text="TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/eqText" />
+        android:id="@+id/timerText"
+        android:textSize="24dp"/>
 
     <TextView
         android:text="TextView"
@@ -33,7 +26,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:id="@+id/scoreText" />
+        android:id="@+id/scoreText"
+        android:textSize="24dp"/>
 
     <Button
         android:text="Start"
@@ -57,25 +51,39 @@
             android:text="Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/choice1" />
+            android:id="@+id/choice1"
+            android:textSize="18sp"/>
 
         <Button
             android:text="Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/choice2" />
+            android:id="@+id/choice2"
+            android:textSize="18sp"/>
 
         <Button
             android:text="Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/choice3" />
+            android:id="@+id/choice3"
+            android:textSize="18sp"/>
 
         <Button
             android:text="Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/choice4" />
+            android:id="@+id/choice4"
+            android:textSize="18sp"/>
     </GridLayout>
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/eqText"
+        android:textSize="48sp"
+        android:layout_below="@+id/scoreText"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="47dp" />
 
 </RelativeLayout>
